# generic-linked-list

./: CMakeLists.txt  README.md  performance.c  tests.c
src/: gll.c  gll.h
